[package]
name = "df_subquery_udf"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
datafusion = { version = "47.0.0", default-features = false, features = ["avro", "parquet"] }
arrow      = "55.1.0"
sqlparser  = "0.55.0"
tokio      = { version = "1.43.1", features = ["rt-multi-thread", "macros"] }
futures    = "0.3"
